--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Reproducir_Audio_y_Vídeo_grupo4</string>
+    <string name="app_name">Reproducir_Camara_y_Vídeo_grupo4</string>
+    <string name="t_video">REPRDUCTOR DE VIDEO</string>
+    <string name="titulo1">VIDEO</string>
+    <string name="titulo2">FOTOGRAFIA</string>
+    <string name="regresar">REGRESAR</string>
 </resources>
